# pymavlink

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  COPYING  CSVReader.py  DFReader.py  MANIFEST.in  README.md  README.txt  __init__.py  dfreader_pandas.py  fgFDM.py  mavactive.py  mavexpression.py  mavextra.py  mavftp.py  mavftp_op.py  mavftpfs.py  mavparm.py  mavtestgen.py  mavutil.py  mavwp.py  pyproject.toml  quaternion.py  requirements.txt  rotmat.py  setup.py  test_gen_js.sh  test_generate_all.sh  test_generator.sh  test_local_changes.sh
.github/: dependabot.yml
debian/: changelog  control  rules  watch
dfindexer/: __init__.py  dfindexer.c  dfindexer.h  dfindexer_cy.pyx  setup.py
dialects/: .gitignore
docs/: cmd_range_checking.md
examples/: README.md  add_msg_to_bin.py  apmsetrate.py  bwtest.py  combine_logs.py  dup_samples.py  gps_web.py  magtest.py  mav2pcap.py  mav_PID_optimization.py  mav_accel.py  mav_connect.py  mav_replay_estimator.py  mav_telem_log.py  mavexample_ardupilot_copter.py  mavftp_example.py  mavgps.py  mavtcpsniff.py  mavtest.py  mavtester.py  min.js  rewrite_log.py  status_msg.py  testparser.js  wptogpx.py
fx/: README.md  command.py  mav.py
generator/: gen_js.sh  mavcrc.py  maverrors.py  mavgen.py  mavgen_ada.py  mavgen_c.py  mavgen_c_cmd_helpers.py  mavgen_cpp11.py  mavgen_cs.py  mavgen_dart.py  mavgen_java.py  mavgen_javascript.py  mavgen_javascript_lite.py  mavgen_javascript_stable.py  mavgen_lua.py  mavgen_objc.py  mavgen_python.py  mavgen_python3.py  mavgen_spin2.py  (+7 more)
(+246 files in other folders)
