# modern build tools use this file: https://packaging.python.org/en/latest/tutorials/packaging-projects/ 
# you need to drop setup_requires from setup.py as well.
# https://peps.python.org/pep-0518/#rationale
[build-system]
requires = ["setuptools>=42","future","lxml"]
build-backend = "setuptools.build_meta"
